<resources>
    <string name="app_name">GasValle</string>

    <string name="nombre">Nombre</string>
    <string name="correoelectronico">Correo Electronico</string>
    <string name="longitud">longitud</string>
    <string name="latitud">latitud</string>
    <string name="register">Register</string>
    <string name="volver">Volver</string>
    <string name="telefono">telefono</string>
    <string name="keymaps">keymaps</string>
    <string name="hint">hint</string>
    <string name="Telefono">Telefono</string>
    <string name="registra_tus_datos">REGISTRA TUS DATOS</string>
    <string name="registrar">REGISTRAR</string>
    <string name="Nombre">Nombre</string>
    <string name="facebook_app_id">211143066646335</string>
    <string name="fb_login_protocol_scheme">fb211143066646335</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_face">Sign in</string>


</resources>
