<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    android:orientation="vertical"
    tools:context=".RegistrarEmpresa">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/nombre"
            android:inputType="text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@android:string/autofill"
            android:hint="@string/telefono"
            android:inputType="text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@android:string/autofill"
            android:hint="@string/correoelectronico"
            android:inputType="text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>
  <!--  <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitud"
            android:inputType="text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitud"
            android:inputType="text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/bton_regist"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bton_atras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/volver"
        android:textColor="@android:color/white" />

    <fragment
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="390dp"
        android:layout_height="280dp"
        android:layout_margin="10dp" />

</LinearLayout>

<!--        android:id="@+id/maps"-->
<!--        android:name="com.google.gms.maps.SupportMapFragment"-->
<!--        android:layout_width="344dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_marginEnd="@android:dimen/app_icon_size" -->

